--- a/public/index.html
+++ b/public/index.html
@@ -29,5 +29,6 @@
   <body class="bp4-dark">
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
+    <div id="empty"></div>
   </body>
 </html>
