--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="dark">
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -7,7 +7,7 @@
     <link rel="shortcut icon" type="image/ico" href="/src/assets/favicon.ico" />
     <title>Notepad</title>
   </head>
-  <body class="dark">
+  <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root" class="bg-gray-50 dark:bg-gray-900"></div>
     <script src="/src/index.jsx" type="module"></script>
