--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <link rel="shortcut icon" type="image/ico" href="/src/assets/favicon.ico" />
-    <title>Notepad</title>
+    <title>Parchment</title>
   </head>
   <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
+    <noscript>You need to enable JavaScript to run Parchment.</noscript>
     <div id="root" class="bg-gray-50 dark:bg-gray-900"></div>
     <script src="/src/index.jsx" type="module"></script>
   </body>
